--- a/package.json
+++ b/package.json
@@ -10,15 +10,24 @@
     "preview": "vite preview",
     "deploy": "gh-pages -d dist"
   },
+  "homepage": "https://netocodes.github.io/bochbeautyandskincare/",
   "dependencies": {
+    "@material-tailwind/react": "^2.1.10",
+    "@types/swiper": "^5.4.3",
+    "clsx": "^2.1.1",
     "flowbite-react": "^0.10.2",
     "framer-motion": "^11.15.0",
+    "notistack": "^3.0.1",
     "preline": "^2.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.1"
+    "react-rater": "^6.0.5",
+    "react-router-dom": "^7.1.1",
+    "sonner": "^1.7.1",
+    "swiper": "^11.1.15",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
