--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "homepage": "https://netocodes.github.io/bochbeautyandskincare/",
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
+    "@studio-freight/react-lenis": "^0.0.47",
     "@types/swiper": "^5.4.3",
     "clsx": "^2.1.1",
     "flowbite-react": "^0.10.2",
     "framer-motion": "^11.15.0",
     "notistack": "^3.0.1",
     "preline": "^2.6.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
