--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES6",
     "lib": ["ES6", "DOM"],
     "module": "ESNext",
+    "types": ["node"],
     "strict": true
   },
   "files": [],
