--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^5.4.0",
     "react-rater": "^6.0.5",
     "react-router-dom": "^7.1.1",
+    "react-toastify": "^11.0.3",
     "sonner": "^1.7.1",
     "swiper": "^11.1.15",
     "tailwind-merge": "^2.6.0"
