--- a/vercel.json
+++ b/vercel.json
@@ -3,9 +3,9 @@
       "env": {
         "NODE_ENV": "production"
       },
-      "installCommand": "npm install",
-      "buildCommand": "npm run build",
+      "buildCommand": "npm install && npm run build",
       "outputDirectory": "frontend/dist",
       "root": "frontend"
     }
-  } 
+  }
+  
