--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
+    "version": 2,
     "build": {
       "env": {
         "NODE_ENV": "production"
       },
-      "buildCommand": "npm install && npm run build",
+   
       "outputDirectory": "frontend/dist",
       "root": "frontend"
     }
