--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-rater": "^6.0.5",
     "react-router-dom": "^7.1.1",
     "react-toastify": "^11.0.3",
+    "react-use-wizard": "^2.3.0",
     "sonner": "^1.7.1",
     "swiper": "^11.1.15",
     "tailwind-merge": "^2.6.0"
