--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,17 +1,18 @@
 {
-  "version": 2,
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
+  ]
+}
+{
   "builds": [
     {
-      "src": "frontend/package.json",
-      "use": "@vercel/static-build"
+      "src": "frontend/package.json",  // Specify the package.json inside the frontend folder
+      "use": "@vercel/node"  // Ensure this is the correct builder (you can also use @vercel/static for static sites)
     }
   ],
   "build": {
     "env": {
-      "VITE_BASE_PATH": "/bochbeautyandskincare"
+      "VITE_BASE_PATH": "/bochbeautyandskincare"  // If you're using environment variables
     }
-  },
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
-  ]
+  }
 }
