--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,12 +1,9 @@
 {
-                "version": 2,
-                
-            
-                "rewrites": [
-                  {
-                    "source": "/(?!.*\\\\.(js|css|png|jpg|jpeg|gif|ico|svg|eot|ttf|woff|woff2|otf))",
-                     "destination": "/index.html"
-                  }
-                ]
-              }
-              
+  "version": 2,
+  "rewrites": [
+    {
+      "source": "/(?!.*\\.(js|css|png|jpg|jpeg|gif|ico|svg|eot|ttf|woff|woff2|otf))",
+      "destination": "/index.html"
+    }
+  ]
+}
