--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,23 +1,8 @@
-{
-  "version": 2,
-  "builds": [
-    {
-      "src": "index.html",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "static/**/*",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "scripts/**/*.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "rewrites": [
+
+ { "rewrites": [
     {
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ]
-}
+  ]}
+
