--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,8 +1,21 @@
 
- { "rewrites": [
+{
+  "rewrites": [
     {
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ]}
+  ],
+  "headers": [
+    {
+      "source": "**/*.js",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/javascript"
+        }
+      ]
+    }
+  ]
+}
 
