Refactor Vercel configuration to use new routing and build structure

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,21 +1,24 @@
-
 {
-  "rewrites": [
+  "version": 2,
+  "builds": [
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "src": "frontend/package.json",
+      "use": "@vercel/node"
     }
   ],
-  "headers": [
+  "routes": [
     {
-      "source": "**/*.js",
-      "headers": [
-        {
-          "key": "Content-Type",
-          "value": "application/javascript"
-        }
-      ]
+      "src": "/(.*)",
+      "dest": "/api/$1"
     }
+  ],
+  "build": {
+    "env": {
+      "VITE_BASE_PATH": "/bochbeautyandskincare"
+    }
+  },
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
-}
 
+}
