Update Vercel configuration to include builds and environment variables

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -3,6 +3,16 @@
   
   "rewrites": [
     { "source": "/(.*)", "destination": "/index.html" }
-  ]
-
+  ],
+"builds": [
+    {
+      "src": "frontend/package.json",  
+      "use": "@vercel/node"
+    }
+  ],
+  "build": {
+    "env": {
+      "VITE_BASE_PATH": "/bochbeautyandskincare"  
+    }
+  }
 }
