--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,17 +1,16 @@
-
-
 {
   "version": 2,
-  
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
+  "builds": [
+    {
+      "src": "dist/**/*",
+      "use": "@vercel/static"
+    }
   ],
-  
-   
-    "headers": {
-      "cache-control": "public, max-age=31536000, immutable"
-    },
-  
-  "cleanUrls": true,
-  "trailingSlash": false
+  "rewrites": [
+    { "source": "/static/(.*)", "destination": "/static/$1" },
+    { "source": "/(.*\\.js)", "destination": "/$1" },
+    { "source": "/(.*\\.ts)", "destination": "/$1" },
+    { "source": "/(.*\\.tsx)", "destination": "/$1" },
+    { "source": "/(.*)", "destination": "/index.html" }
+  ]
 }
