--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,13 +1,7 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "dist/**/*", 
-      "use": "@vercel/static"
-    }
-  ],
   "routes": [
-    { "src": "/bochbeautyandskincare/assets/(.*)", "dest": "/dist/assets/$1" }, 
-    { "src": "/bochbeautyandskincare/(.*)", "dest": "/dist/index.html" } 
+    { "src": "/assets/(.*)", "dest": "/dist/assets/$1" }, 
+    { "src": "/(.*)", "dest": "/dist/index.html" } 
   ]
 }
