--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,7 +1,17 @@
+
+
 {
   "version": 2,
-  "routes": [
-    { "src": "/assets/(.*)", "dest": "/dist/assets/$1" }, 
-    { "src": "/(.*)", "dest": "/dist/index.html" } 
-  ]
+  
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
+  ],
+  
+   
+    "headers": {
+      "cache-control": "public, max-age=31536000, immutable"
+    },
+  
+  "cleanUrls": true,
+  "trailingSlash": false
 }
