--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,11 +1,13 @@
-
 {
   "version": 2,
-  
   "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
+    {
+      "source": "/static/(.*)",
+      "destination": "/static/$1"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
   ]
- 
-
-  
 }
