Update Vercel configuration to change static asset routing path

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,8 +2,8 @@
   "version": 2,
   "rewrites": [
     {
-      "source": "/static/(.*)",
-      "destination": "/static/$1"
+      "source": "/bochbeautyandskincare/(.*)",
+      "destination": "/bochbeautyandskincare/$1"
     },
     {
       "source": "/(.*)",
