--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,13 +1,11 @@
 {
   "version": 2,
-  "rewrites": [
+  "headers": [
     {
-      "source": "/bochbeautyandskincare/(.*)",
-      "destination": "/bochbeautyandskincare/$1"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "source": "/(.*/.js)",
+      "headers": [
+        { "key": "Content-Type", "value": "application/javascript" }
+      ]
     }
   ]
 }
