--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,11 +1,22 @@
 {
   "version": 2,
-  "headers": [
+  "rewrites": [
     {
-      "source": "/(.*/.js)",
-      "headers": [
-        { "key": "Content-Type", "value": "application/javascript" }
-      ]
+      "source": "/bochbeautyandskincare/(.*)",
+      "destination": "/bochbeautyandskincare/$1"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
-  ]
-}
+  ],
+
+    "headers": [
+      {
+        "source": "/(.*/.js)",
+        "headers": [
+          { "key": "Content-Type", "value": "application/javascript" }
+        ]
+      }
+    ]
+  }
