Add email configuration, new PageCarousel component, and update dependencies

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,5 +9,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "body-parser": "^1.20.3",
+    "nodemailer": "^6.10.0"
+  }
 }
