--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
   },
   "homepage": "https://netocodes.github.io/bochbeautyandskincare/",
   "dependencies": {
+    "@cloudinary/react": "^1.14.0",
+    "@cloudinary/url-gen": "^1.21.0",
     "@material-tailwind/react": "^2.1.10",
     "@studio-freight/react-lenis": "^0.0.47",
     "@types/swiper": "^5.4.3",
