--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,22 +1,9 @@
 {
-  "version": 2,
   "rewrites": [
-    {
-      "source": "/bochbeautyandskincare/(.*)",
-      "destination": "/bochbeautyandskincare/$1"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ],
-
-    "headers": [
-      {
-        "source": "/(.*/.js)",
-        "headers": [
-          { "key": "Content-Type", "value": "application/javascript" }
-        ]
-      }
-    ]
-  }
+    { "source": "/static/(.*)", "destination": "/static/$1" },
+    { "source": "/(.*\\.js)", "destination": "/$1" },
+    { "source": "/(.*\\.css)", "destination": "/$1" },
+    { "source": "/(.*\\.png|.*\\.jpg|.*\\.svg)", "destination": "/$1" },
+    { "source": "/(.*)", "destination": "/index.html" }
+  ]
+}
