--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,9 +1,13 @@
 {
-  "rewrites": [
-    { "source": "/static/(.*)", "destination": "/static/$1" },
-    { "source": "/(.*\\.js)", "destination": "/$1" },
-    { "source": "/(.*\\.css)", "destination": "/$1" },
-    { "source": "/(.*\\.png|.*\\.jpg|.*\\.svg)", "destination": "/$1" },
-    { "source": "/(.*)", "destination": "/index.html" }
+  "version": 2,
+  "routes": [
+    {
+      "src": "/assets/(.*)",
+      "dest": "/assets/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
   ]
 }
