Update Vercel configuration to include base path for assets and index file

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,11 +2,11 @@
   "version": 2,
   "routes": [
     {
-      "src": "/assets/(.*)",
+      "src": "/bochbeautyandskincare/assets/(.*)",
       "dest": "/dist/assets/$1"
     },
     {
-      "src": "/(.*)",
+      "src": "/bochbeautyandskincare/(.*)",
       "dest": "/dist/index.html"
     }
   ]
