Add Nixpacks configuration, update environment variables, and modify component styles and functionality

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-PORT_NUMBER=5000;
-EMAIL="netochukwucodes@gmail.com";
-PASSWORD="DAVEmoore12"
+PORT_NUMBER=3000
+EMAIL="contact@bochbeautyandskincare.shop"
+PASSWORD="beautyofchiri0$W"
