--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@studio-freight/react-lenis": "^0.0.47",
     "@types/swiper": "^5.4.3",
     "@vercel/analytics": "^1.4.1",
+    "axios": "^1.8.1",
     "clsx": "^2.1.1",
     "flowbite-react": "^0.10.2",
     "framer-motion": "^11.15.0",
