--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist -r https://github.com/Netocodes/bochbeautyandskincare.git"
+    "deploy": "gh-pages -d dist "
   },
   "homepage": "https://netocodes.github.io/bochbeautyandskincare/",
   "dependencies": {
