Add redirect from root to /bochbeautyandskincare in Vercel configuration

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -12,5 +12,14 @@
                                                 "source": "/(.*)",
                                                 "destination": "/index.html"
                                               }
-                ]
+                ],  
+                      "redirects": [
+                                  {
+                                    "source": "/",
+                                    "destination": "/bochbeautyandskincare",
+                                    "permanent": true
+                                  }
+                       ]
+                              
+               
 }
