Update favicon and adjust routing configuration for Vercel deployment

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,25 +1,13 @@
 {
                 "rewrites": [
-                                {
-                                                "source": "/bochbeautyandskincare/assets/:path*",
-                                                "destination": "/assets/:path*"
-                                },
-                                {
-                                                "source": "/logo2.svg",
-                                                "destination": "/path/to/logo2.svg"
-                                },
-                                {
-                                                "source": "/(.*)",
-                                                "destination": "/index.html"
-                                              }
-                ],  
-                      "redirects": [
-                                  {
-                                    "source": "/",
-                                    "destination": "/bochbeautyandskincare",
-                                    "permanent": true
-                                  }
-                       ]
-                              
-               
-}
+                  {
+                    "source": "/assets/:path*",
+                    "destination": "/assets/:path*"
+                  },
+                  
+                  {
+                    "source": "/(.*)",
+                    "destination": "/index.html"
+                  }
+                ]
+              }
