Add currency conversion feature and enhance SEO metadata across multiple components

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,8 @@
     "react-use-wizard": "^2.3.0",
     "sonner": "^1.7.1",
     "swiper": "^11.1.15",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^2.6.0",
+    "use-react-countries": "^2.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
