--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -9,5 +9,19 @@
                     "source": "/(.*)",
                     "destination": "/index.html"
                   }
-                ]          
+                ],
+                  "redirects": [
+                    {
+                      "source": "/(.*)",
+                      "destination": "https://www.bochbeautyandskincare.shop/$1",
+                      "permanent": true,
+                      "has": [
+                        {
+                          "type": "host",
+                          "value": "bochbeautyandskincare.shop"
+                        }
+                      ]
+                    }
+                  ]
+                      
               }
