--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-      "dev": "vite",
+    "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -14,8 +14,10 @@
   "dependencies": {
     "@cloudinary/react": "^1.14.0",
     "@cloudinary/url-gen": "^1.21.0",
+    "@lottiefiles/dotlottie-react": "^0.13.2",
     "@material-tailwind/react": "^2.1.10",
     "@studio-freight/react-lenis": "^0.0.47",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/swiper": "^5.4.3",
     "@vercel/analytics": "^1.4.1",
     "axios": "^1.8.1",
