--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,15 +23,16 @@
     "axios": "^1.8.1",
     "clsx": "^2.1.1",
     "flowbite-react": "^0.10.2",
-    "framer-motion": "^11.15.0",
+    "framer-motion": "^12.23.0",
     "notistack": "^3.0.1",
+    "ogl": "^1.0.11",
     "preline": "^2.6.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.54.2",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-rater": "^6.0.5",
     "react-router-dom": "^7.1.1",
     "react-toastify": "^11.0.3",
