feat: add BlurText component for animated text effects and PopOver component for dialog interactions
- Implemented BlurText component with customizable animation properties and intersection observer for visibility detection.
- Added PopOver component using Headless UI for modal dialogs with confirmation actions.
- Updated pnpm workspace configuration to ignore built dependencies.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@cloudinary/react": "^1.14.0",
     "@cloudinary/url-gen": "^1.21.0",
+    "@headlessui/react": "^2.2.7",
+    "@heroicons/react": "^2.2.0",
     "@lottiefiles/dotlottie-react": "^0.13.2",
     "@material-tailwind/react": "^2.1.10",
     "@studio-freight/react-lenis": "^0.0.47",
@@ -24,6 +26,8 @@
     "clsx": "^2.1.1",
     "flowbite-react": "^0.10.2",
     "framer-motion": "^12.23.0",
+    "motion": "^12.23.12",
+    "motion-utils": "^12.23.6",
     "notistack": "^3.0.1",
     "ogl": "^1.0.11",
     "preline": "^2.6.0",
@@ -34,6 +38,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-rater": "^6.0.5",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^7.1.1",
     "react-toastify": "^11.0.3",
     "react-use-wizard": "^2.3.0",
